Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-141819

[Reg 6.8.4->6.8.5] Setting background-color in the StyleSheet causes the QTextEdit border not to render properly with the Windows 11 style.

XMLWordPrintable

    • Windows
    • 65ffcb484 (dev), 6f243b2e1 (6.10), 93eead466 (tqtc/lts-6.8)

      When setting background-color in the StyleSheet, it causes the QTextEdit border to not render properly with the Windows 11 style. The issue doesn’t appear with the Fusion style and doesn’t occur with QLineEdit.

      To reproduce the issue, run the attached example project.

        1. 6.8.4.png
          6.8.4.png
          7 kB
        2. 6.8.5.png
          6.8.5.png
          7 kB
        3. qtbug141819.zip
          2 kB
        For Gerrit Dashboard: QTBUG-141819
        # Subject Branch Project Status CR V

            chehrlic Christian Ehrlicher
            mahdi.belila Mehdi Belila
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes